--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,6 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  p: a(href="/login") Login
+  p: a(href="/account") Account
+  p: a(href="/logout") Logout
